--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" integrity="sha256-Sk3nkD6mLTMOF0EOpNtsIry+s1CsaqQC1rVLTAy+0yc= sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ==" crossorigin="anonymous"></script>
-    <script src="js/rplogic.js"></script>
+    <script src="js/rpslogic.js"></script>
+    <script src="js/ui.js"></script>
 
     <!--[if lt IE 9]>
       <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -36,8 +37,10 @@
           <li><a href="#">Github</a></li>
           <li><a href="#">About</a></li>
         </ul>
-
-
+        <div class="col-sm-3 col-md-3 pull-right">
+          <button type="button" class="btn btn-success" id="play">
+            <span class="glyphicon glyphicon-star" aria-hidden="true"></span> Play Game!
+          </button>
       </div>
     </nav>
 
@@ -67,32 +70,21 @@
       <div class="col-sm-6">
         <div class="row">
           <div class="col-xs-12">
-            <h2>Article Heading</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis pharetra varius quam sit amet vulputate.
-              Quisque mauris augue, molestie tincidunt condimentum vitae, gravida a libero. Aenean sit amet felis
-              dolor, in sagittis nisi. Sed ac orci quis tortor imperdiet venenatis. Duis elementum auctor accumsan.
-              Aliquam in felis sit amet augue.</p>
+            <h2>Welcome To RPS</h2>
+            <p>
+              This is the classic game of Rock Paper Scissors. For the uninitiated, here are the rules:
+            </p>
+            <p>
+              Rock-paper-scissors is a zero sum hand game usually played between two people, in which each player simultaneously forms one of three shapes with an outstretched hand. These shapes are "rock" (a simple fist), "paper" (a flat hand), and "scissors" (a fist with the index and middle fingers together forming a V). The game has only three possible outcomes other than a tie: a player who decides to play rock will beat another player who has chosen scissors ("rock crushes scissors") but will lose to one who has played paper ("paper covers rock"); a play of paper will lose to a play of scissors ("scissors cut paper"). If both players throw the same shape, the game is tied and is usually immediately replayed to break the tie.
+            </p>
+            <p>
+              Click on the top right play button to begin battle against the A.I.
+            </p>
             <p class="lead"><button class="btn btn-default">Read More</button></p>
             <p class="pull-right"><span class="label label-default">keyword</span> <span class="label label-default">tag</span> <span class="label label-default">post</span></p>
             <ul class="list-inline"><li><a href="#">2 Days Ago</a></li><li><a href="#"><i class="glyphicon glyphicon-comment"></i> 2 Comments</a></li><li><a href="#"><i class="glyphicon glyphicon-share"></i> 14 Shares</a></li></ul>
           </div>
         </div>
-
-
-
-        <div class="row">
-          <div class="col-xs-12">
-            <h2>Article Heading</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis pharetra varius quam sit amet vulputate.
-              Quisque mauris augue, molestie tincidunt condimentum vitae, gravida a libero. Aenean sit amet felis
-              dolor, in sagittis nisi. Sed ac orci quis tortor imperdiet venenatis. Duis elementum auctor accumsan.
-              Aliquam in felis sit amet augue.</p>
-            <p class="lead"><button class="btn btn-default">Read More</button></p>
-            <p class="pull-right"><span class="label label-default">keyword</span> <span class="label label-default">tag</span> <span class="label label-default">post</span></p>
-            <ul class="list-inline"><li><a href="#">1 Week Ago</a></li><li><a href="#"><i class="glyphicon glyphicon-comment"></i> 4 Comments</a></li><li><a href="#"><i class="glyphicon glyphicon-share"></i> 34 Shares</a></li></ul>
-          </div>
-        </div>
-        <hr>
       </div><!--/center-->
 
       <!--right-->
@@ -114,7 +106,6 @@
             </div>
             <hr>
             <div class="panel panel-default">
-              <div class="panel-heading">Game Score:</div>
               <div class="panel-body">Human Score: 0 <br> Player Score: 0
               </div>
             </div>
