add images to view and modified original js file

--- a/index.html
+++ b/index.html
@@ -85,6 +85,22 @@
             <ul class="list-inline"><li><a href="#">2 Days Ago</a></li><li><a href="#"><i class="glyphicon glyphicon-comment"></i> 2 Comments</a></li><li><a href="#"><i class="glyphicon glyphicon-share"></i> 14 Shares</a></li></ul>
           </div>
         </div>
+
+          <center style="display: none" id="gameon">
+            <h1>Choose your move:</h1> <br>
+
+            <div class="grow pic">
+              <img src="rock.png" id="rock" alt="rock" height="75" width="75">
+            </div>
+
+            <div class="grow pic">
+              <img src="paper.png" id="paper" alt="paper" height="75" width="75">
+            </div>
+            <div class="grow pic">
+              <img src="scissor.png" id="scissors" alt="scissors" height="75" width="75">
+            </div>
+          </center>
+
       </div><!--/center-->
 
       <!--right-->
