--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" integrity="sha256-Sk3nkD6mLTMOF0EOpNtsIry+s1CsaqQC1rVLTAy+0yc= sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ==" crossorigin="anonymous"></script>
     <script src="js/rpslogic.js"></script>
-    <script src="js/ui.js"></script>
 
     <!--[if lt IE 9]>
       <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -106,26 +105,26 @@
       <!--right-->
       <div class="col-sm-3">
             <h2>Computer</h2>
+            <hr>
           <div class="panel panel-default">
-              <div class="panel-heading">Rock History: </div>
-              <div class="panel-body">The computer player has chosen rock 0 times.</div>
-            </div>
-            <hr>
-            <div class="panel panel-default">
-              <div class="panel-heading">Paper History: </div>
-              <div class="panel-body">The computer player has chosen paper 0 times.</div>
-            </div>
-            <hr>
-            <div class="panel panel-default">
-              <div class="panel-heading">Scissors History:</div>
-              <div class="panel-body">The computer player has chosen scissors 0 times.</div>
-            </div>
-            <hr>
-            <div class="panel panel-default">
-              <div class="panel-body">Human Score: 0 <br> Player Score: 0
+              <div class="panel-heading">Move History: </div>
+              <div class="panel-body">
+                Rock Turns: <span class="ties" id="score">0</span> <br>
+                Paper Turns: <span class="ties" id="score">0</span> <br>
+                Scissors Turns: <span class="ties" id="score">0</span>
               </div>
             </div>
             <hr>
+            <div class="panel panel-default">
+              <div class="panel-heading">Match Score:</div>
+              <div class="panel-body">
+              Human Score: <span class="humanwins" id="score">0</span>
+              <br>
+              Player Score: <span class="computerwins" id="score">0</span>
+              <br>
+              Tie Games: <span class="ties" id="score">0</span>
+              </div>
+            </div>
       </div><!--/right-->
       <hr>
     </div><!--/container-fluid-->
