All scoreboards work except rock turns

--- a/index.html
+++ b/index.html
@@ -50,17 +50,17 @@
             <h2>Human</h2>
           <div class="panel panel-default">
               <div class="panel-heading">Rock</div>
-              <div class="panel-body">The solid mineral material forming part of the surface of the earth and other similar planets, exposed on the surface or underlying the soil or oceans.</div>
+              <div class="panel-body">The hard, solid material that the surface of the Earth is made of.</div>
             </div>
             <hr>
             <div class="panel panel-default">
               <div class="panel-heading">Paper</div>
-              <div class="panel-body">Material manufactured in thin sheets from the pulp of wood or other fibrous substances, used for writing, drawing, or printing on, or as wrapping material.</div>
+              <div class="panel-body">The material that is used in the form of thin sheets for writing or printing on, wrapping things, etc.</div>
             </div>
             <hr>
             <div class="panel panel-default">
               <div class="panel-heading">Scissors</div>
-              <div class="panel-body">an instrument used for cutting cloth, paper, and other thin material, consisting of two blades laid one on top of the other and fastened in the middle so as to allow them to be opened and closed by a thumb and finger inserted through rings on the end of their handles.</div>
+              <div class="panel-body">A tool used for cutting paper, cloth, etc., that has two blades joined together in the middle so that the sharp edges slide against each other.</div>
             </div>
 
       </div><!--/left-->
@@ -80,8 +80,7 @@
               Click on the top right play button to begin battle against the A.I.
             </p>
             <p class="lead"><button class="btn btn-default">Read More</button></p>
-            <p class="pull-right"><span class="label label-default">keyword</span> <span class="label label-default">tag</span> <span class="label label-default">post</span></p>
-            <ul class="list-inline"><li><a href="#">2 Days Ago</a></li><li><a href="#"><i class="glyphicon glyphicon-comment"></i> 2 Comments</a></li><li><a href="#"><i class="glyphicon glyphicon-share"></i> 14 Shares</a></li></ul>
+
           </div>
         </div>
 
@@ -107,12 +106,12 @@
             <h2>Computer</h2>
             <hr>
           <div class="panel panel-default">
-              <div class="panel-heading">Move History: </div>
-              <div class="panel-body">
-                Rock Turns: <span class="ties" id="score">0</span> <br>
-                Paper Turns: <span class="ties" id="score">0</span> <br>
-                Scissors Turns: <span class="ties" id="score">0</span>
-              </div>
+              <div class="panel-heading">Computer Move History: </div>
+                <div class="panel-body">
+                  Rock Turns:     <span class="rturns" id="score">0</span> <br>
+                  Paper Turns:    <span class="pturns" id="score">0</span> <br>
+                  Scissors Turns: <span class="sturns" id="score">0</span>
+                </div>
             </div>
             <hr>
             <div class="panel panel-default">
@@ -123,6 +122,8 @@
               Player Score: <span class="computerwins" id="score">0</span>
               <br>
               Tie Games: <span class="ties" id="score">0</span>
+              <br>
+              Total Games: <span class="totalgames" id="score">0</span>
               </div>
             </div>
       </div><!--/right-->
