change panel color

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
       <div class="col-sm-3">
             <h2>Computer</h2>
             <hr>
-          <div class="panel panel-default">
+          <div class="panel panel-danger">
               <div class="panel-heading">Computer Move History: </div>
                 <div class="panel-body">
                   Rock Turns:     <span class="rturns" id="score">0</span> <br>
@@ -124,8 +124,8 @@
                 </div>
             </div>
             <hr>
-            <div class="panel panel-default">
-              <div class="panel-heading">Match Score:</div>
+            <div class="panel panel-primary">
+              <div class="panel-heading">Match Summary:</div>
               <div class="panel-body">
               Human Score: <span class="humanwins" id="score">0</span>
               <br>
