change text in panel

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
               <div class="panel-body">
               Human Score: <span class="humanwins" id="score">0</span>
               <br>
-              Player Score: <span class="computerwins" id="score">0</span>
+              Computer Score: <span class="computerwins" id="score">0</span>
               <br>
               Tie Games: <span class="ties" id="score">0</span>
               <br>
